--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -125,7 +124,6 @@ allow 130.193.15.79;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
-allow 139.162.249.209;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.98.11.62;
@@ -170,7 +168,6 @@ allow 162.247.74.7;
 allow 162.247.74.74;
 allow 162.251.5.152;
 allow 163.172.45.102;
-allow 163.5.143.76;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
@@ -630,6 +627,7 @@ allow 193.218.118.133;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
+allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
 allow 193.233.133.42;
@@ -887,7 +885,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -908,7 +905,6 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -1369,7 +1365,6 @@ allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:3e3:519::1;
 allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:470::30;
-allow 2a0e:b107:12d:abcd:f8fe:d2ff:feb0:6d14;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
@@ -1392,6 +1387,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
+allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
@@ -1413,7 +1409,6 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.227.117.31;
 allow 34.35.7.241;
 allow 35.0.127.52;
 allow 37.114.37.81;
@@ -1496,6 +1491,7 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.182.21.248;
+allow 46.195.106.181;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1520,7 +1516,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1559,6 +1554,7 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 54.85.243.209;
 allow 5.61.51.143;
 allow 5.79.66.19;
 allow 62.133.45.2;
@@ -1609,7 +1605,6 @@ allow 82.118.242.36;
 allow 82.153.138.182;
 allow 82.153.138.24;
 allow 82.221.131.5;
-allow 82.221.131.71;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
