--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -6,7 +6,6 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -125,7 +124,6 @@ deny 130.193.15.79;
 deny 135.125.205.25;
 deny 136.244.111.163;
 deny 138.59.18.110;
-deny 139.162.249.209;
 deny 139.99.172.11;
 deny 139.99.8.57;
 deny 141.98.11.62;
@@ -170,7 +168,6 @@ deny 162.247.74.7;
 deny 162.247.74.74;
 deny 162.251.5.152;
 deny 163.172.45.102;
-deny 163.5.143.76;
 deny 164.132.172.209;
 deny 165.73.242.163;
 deny 166.70.207.2;
@@ -630,6 +627,7 @@ deny 193.218.118.133;
 deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
+deny 193.218.118.188;
 deny 193.218.118.89;
 deny 193.233.133.109;
 deny 193.233.133.42;
@@ -887,7 +885,6 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
-deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.26.133.152;
 deny 23.94.211.25;
@@ -908,7 +905,6 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -1369,7 +1365,6 @@ deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:3e3:519::1;
 deny 2a0e:97c0:3ea:372::1;
 deny 2a0e:97c0:470::30;
-deny 2a0e:b107:12d:abcd:f8fe:d2ff:feb0:6d14;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:d602:1:14bc::2;
 deny 2a0e:d602:2:2a2::2;
@@ -1392,6 +1387,7 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
+deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
@@ -1413,7 +1409,6 @@ deny 2a12:d8c0:109a:9001::7;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
-deny 3.227.117.31;
 deny 34.35.7.241;
 deny 35.0.127.52;
 deny 37.114.37.81;
@@ -1496,6 +1491,7 @@ deny 45.95.169.230;
 deny 45.95.169.255;
 deny 46.165.243.36;
 deny 46.182.21.248;
+deny 46.195.106.181;
 deny 46.226.164.14;
 deny 46.232.251.191;
 deny 46.234.47.105;
@@ -1520,7 +1516,6 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
-deny 5.255.100.26;
 deny 5.255.103.190;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1559,6 +1554,7 @@ deny 54.36.209.254;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
+deny 54.85.243.209;
 deny 5.61.51.143;
 deny 5.79.66.19;
 deny 62.133.45.2;
@@ -1609,7 +1605,6 @@ deny 82.118.242.36;
 deny 82.153.138.182;
 deny 82.153.138.24;
 deny 82.221.131.5;
-deny 82.221.131.71;
 deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
